Update website with new design and AR experience

--- a/public/index-new.html
+++ b/public/index-new.html
@@ -312,7 +312,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Team</a></li>
-                    <li><a href="ar-experience.html" class="btn">Try AR Experience</a></li>
+                    <li><a href="ar.html" class="btn">Try AR Experience</a></li>
                 </ul>
             </nav>
         </div>
@@ -323,7 +323,7 @@
         <div class="hero-content">
             <h1>Experience Indian Heritage in Augmented Reality</h1>
             <p>Bridging the gap between history and technology with our innovative AR solution for Smart India Hackathon</p>
-            <a href="ar-experience.html" class="btn">Start AR Experience</a>
+            <a href="ar.html" class="btn">Start AR Experience</a>
         </div>
     </section>
 
@@ -378,7 +378,7 @@
             <div class="ar-content">
                 <h2 class="section-title">Experience AR</h2>
                 <p>Ready to explore Indian heritage like never before? Click the button below to launch our AR experience. You'll need to allow camera access to view and interact with 3D models of historical monuments using our custom markers.</p>
-                <a href="ar-experience.html" class="btn">Launch AR Experience</a>
+                <a href="ar.html" class="btn">Launch AR Experience</a>
             </div>
         </div>
     </section>
@@ -434,42 +434,5 @@
             });
         });
     </script>
-</body>
-                    <h3>Featured Heritage Sites:</h3>
-                    <ul>
-                        <li>Taj Mahal</li>
-                        <li>Hampi</li>
-                        <li>Khajuraho</li>
-                        <li>Konark Sun Temple</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        
-        <!-- Help Button -->
-        <div id="help-btn" class="help-btn">?</div>
-        
-        <!-- Help Modal -->
-        <div id="help-modal" class="help-modal">
-            <div class="help-content">
-                <span class="close-help">&times;</span>
-                <h2>How to Use</h2>
-                <ol>
-                    <li>Print the marker pattern from the markers folder</li>
-                    <li>Allow camera access when prompted</li>
-                    <li>Point your camera at the printed marker</li>
-                    <li>Tap on the 3D model to see more information</li>
-                </ol>
-                <p><strong>Note:</strong> For best results, ensure good lighting and keep the marker steady.</p>
-            </div>
-        </div>
-    </a-scene>
-
-    <div id="loading">
-        <div class="spinner"></div>
-        <p>Loading AR Experience...</p>
-    </div>
-
-    <script src="js/main.js"></script>
 </body>
 </html>
