--- a/public/index.html
+++ b/public/index.html
@@ -378,7 +378,7 @@
             <div class="ar-content">
                 <h2 class="section-title">Experience AR</h2>
                 <p>Ready to explore Indian heritage like never before? Click the button below to launch our AR experience. You'll need to allow camera access to view and interact with 3D models of historical monuments using our custom markers.</p>
-                <a href="ar-experience.html" class="btn">Launch AR Experience</a>
+                <a href="ar-simple.html" class="btn">Launch AR Experience</a>
             </div>
         </div>
     </section>
