Update AR experience links to point to working test page

--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Team</a></li>
-                    <li><a href="ar-experience.html" class="btn">Try AR Experience</a></li>
+                    <li><a href="ar-simplest.html" class="btn">Try AR Experience</a></li>
                 </ul>
             </nav>
         </div>
@@ -323,7 +323,7 @@
         <div class="hero-content">
             <h1>Experience Indian Heritage in Augmented Reality</h1>
             <p>Bridging the gap between history and technology with our innovative AR solution for Smart India Hackathon</p>
-            <a href="ar-experience.html" class="btn">Start AR Experience</a>
+            <a href="ar-simplest.html" class="btn">Start AR Experience</a>
         </div>
     </section>
 
