--- a/public/ar-taj-mahal.html
+++ b/public/ar-taj-mahal.html
@@ -31,16 +31,15 @@
     </div>
     
     <a-scene embedded arjs>
-        <!-- Main marker with Taj Mahal model -->
+        <!-- Using a simple 3D model from CDN for reliability -->
         <a-marker preset="hiro">
-            <!-- Using a simple box for now to test -->
-            <a-box position="0 0.5 0" 
-                  width="1" height="1" depth="1"
-                  color="#4CC3D9">
-                <a-animation attribute="rotation" to="0 360 0" dur="5000" repeat="indefinite"></a-animation>
-            </a-box>
+            <a-entity gltf-model="https://cdn.aframe.io/test-models/models/glTF-2.0/box/Box.gltf"
+                     scale="0.5 0.5 0.5"
+                     position="0 0.5 0">
+                <a-animation attribute="rotation" to="0 360 0" dur="10000" repeat="indefinite"></a-animation>
+            </a-entity>
             
-            <a-text value="TAJ MAHAL" 
+            <a-text value="INDIAN HERITAGE" 
                    color="white" 
                    align="center" 
                    position="0 1.5 0" 
