Switch to Box.glb model

--- a/public/taj-ar.html
+++ b/public/taj-ar.html
@@ -34,8 +34,8 @@
         <!-- Main marker with Taj Mahal model -->
         <a-marker preset="hiro">
             <!-- Taj Mahal Model -->
-            <a-entity position="0 0 0" scale="0.1 0.1 0.1">
-                <a-entity id="taj-model" gltf-model="url(/models/taj_mahal/scene.gltf)">
+            <a-entity position="0 0.5 0" scale="0.5 0.5 0.5">
+                <a-entity id="taj-model" gltf-model="url(/models/taj_mahal/Box.glb)">
                     <!-- Fallback in case model doesn't load -->
                     <a-box color="#e74c3c" visible="false" class="fallback"></a-box>
                 </a-entity>
