--- a/public/ar-simplest.html
+++ b/public/ar-simplest.html
@@ -33,7 +33,7 @@
     <a-scene embedded arjs='sourceWidth: 1280; sourceHeight: 720; displayWidth: 100%; displayHeight: 100%;' renderer='antialias: true; alpha: true'>
         <!-- Preload assets -->
         <a-assets>
-            <a-asset-item id="taj-mahal" src="/models/taj_mahal/Box.glb"></a-asset-item>
+            <a-asset-item id="taj-mahal" src="models/taj_mahal/Box.glb"></a-asset-item>
         </a-assets>
         
         <!-- Main marker with Taj Mahal model -->
