--- a/public/index.html
+++ b/public/index.html
@@ -323,7 +323,7 @@
         <div class="hero-content">
             <h1>Experience Indian Heritage in Augmented Reality</h1>
             <p>Bridging the gap between history and technology with our innovative AR solution for Smart India Hackathon</p>
-            <a href="ar-simplest.html" class="btn">Start AR Experience</a>
+            <a href="taj-placeholder-ar.html" class="btn">Start AR Experience</a>
         </div>
     </section>
 
