--- a/public/index.html
+++ b/public/index.html
@@ -311,8 +311,8 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="ar-simplest.html" class="btn">Try AR Experience</a></li>
+                    <li><a href="team.html">Our Team</a></li>
+                    <li><a href="taj-placeholder-ar.html" class="btn">Try AR Experience</a></li>
                 </ul>
             </nav>
         </div>
