Update team page with all members and guest avatars

--- a/public/team.html
+++ b/public/team.html
@@ -103,35 +103,31 @@
 
     <section class="team-section">
         <div class="container">
-            <h2 class="section-title">Our Amazing Team</h2>
+            <h2 class="section-title">Our Team</h2>
             <div class="team-members">
-                <!-- Team Member 1 -->
                 <div class="team-member">
-                    <img src="https://via.placeholder.com/150" alt="Aditya">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Aditya">
                     <h3>Aditya</h3>
-                    <p class="team-role">Project Lead & Full Stack Developer</p>
-                    <p>Passionate about creating immersive AR experiences that showcase India's rich cultural heritage.</p>
-                    <div class="social-links">
-                        <a href="https://github.com/applxcake" target="_blank" title="GitHub">
-                            <i class="fab fa-github"></i> GitHub
-                        </a>
-                    </div>
                 </div>
-
-                <!-- Add more team members here -->
                 <div class="team-member">
-                    <img src="https://via.placeholder.com/150" alt="Team Member">
-                    <h3>Team Member</h3>
-                    <p class="team-role">Role</p>
-                    <p>Add a brief description or bio here.</p>
-                    <div class="social-links">
-                        <a href="#" target="_blank" title="GitHub">
-                            <i class="fab fa-github"></i> GitHub
-                        </a>
-                        <a href="#" target="_blank" title="LinkedIn">
-                            <i class="fab fa-linkedin"></i> LinkedIn
-                        </a>
-                    </div>
+                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Ritik">
+                    <h3>Ritik</h3>
+                </div>
+                <div class="team-member">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Ansh">
+                    <h3>Ansh</h3>
+                </div>
+                <div class="team-member">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Aditi">
+                    <h3>Aditi</h3>
+                </div>
+                <div class="team-member">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Riya">
+                    <h3>Riya</h3>
+                </div>
+                <div class="team-member">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Abhay">
+                    <h3>Abhay</h3>
                 </div>
             </div>
 
