--- a/public/index.html
+++ b/public/index.html
@@ -388,11 +388,36 @@
                 </div>
             </div>
         </div>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>About Us</h3>
+                    <p>Experience the rich heritage of India through our innovative AR platform.</p>
                 </div>
-                <div class="footer-bottom">
-                    <p>&copy; 2025 Ctrl Alt Bharat. All rights reserved.</p>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#heritage">Heritage</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                    </ul>
                 </div>
+                <div class="footer-section">
+                    <h3>Connect With Us</h3>
+                    <div class="social-links">
+                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Ctrl+Alt+Bharat. All rights reserved.</p>
             </div>
         </div>
     </footer>
