Redesign navigation and improve overall styling

--- a/public/index.html
+++ b/public/index.html
@@ -289,12 +289,16 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <a href="index.html" class="logo">Ctrl+Alt+Bharat</a>
+            <a href="index.html" class="logo">
+                <i class="fas fa-monument"></i> Ctrl+Alt+Bharat
+            </a>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="team.html">Our Team</a></li>
-                <li><a href="taj-placeholder-ar.html" class="btn">Try AR</a></li>
+                <li><a href="#home" class="active"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="team.html"><i class="fas fa-users"></i> Our Team</a></li>
+                <li><a href="taj-placeholder-ar.html" class="btn btn-primary">
+                    <i class="fas fa-vr-cardboard"></i> Try AR Experience
+                </a></li>
             </ul>
         </nav>
     </header>
