--- a/public/team.html
+++ b/public/team.html
@@ -162,12 +162,16 @@
 <body>
     <header>
         <nav class="container">
-            <a href="index.html" class="logo">Ctrl+Alt+Bharat</a>
+            <a href="index.html" class="logo">
+                <i class="fas fa-monument"></i> Ctrl+Alt+Bharat
+            </a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="#" class="active">Our Team</a></li>
-                <li><a href="taj-placeholder-ar.html" class="btn">Try AR</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html#about"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="#" class="active"><i class="fas fa-users"></i> Our Team</a></li>
+                <li><a href="taj-placeholder-ar.html" class="btn btn-primary">
+                    <i class="fas fa-vr-cardboard"></i> Try AR Experience
+                </a></li>
             </ul>
         </nav>
     </header>
@@ -243,7 +247,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Ctrl+Alt+Bharat. All rights reserved.</p>
+            <p>&copy; 2025 Ctrl+Alt+Bharat. All rights reserved.</p>
         </div>
     </footer>
 
