--- a/public/index.html
+++ b/public/index.html
@@ -307,16 +307,15 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero" id="home">
+    <section class="hero" id="home" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.thepalaceonwheels.org/storage/blog/taj-mahal-with-deccan-odyssey.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;">
         <div class="container">
-            <div class="hero-content">
-                <h1>Experience Indian Heritage in AR</h1>
-                <p>Explore India's rich cultural heritage through immersive augmented reality experiences. Our innovative platform brings historical monuments to life, making learning interactive and engaging.</p>
-                <div class="cta-buttons">
-                    <a href="taj-placeholder-ar.html" class="btn">Start AR Experience</a>
-                    <a href="#features" class="btn btn-outline">Learn More</a>
-                </div>
-            </div>
+            <h1>Experience Indian Heritage in AR</h1>
+            <p>Discover the rich cultural heritage of India through immersive augmented reality experiences.</p>
+            <a href="#heritage" class="btn btn-primary">Explore Now</a>
         </div>
     </section>
 
@@ -481,23 +480,6 @@
         </div>
     </footer>
 
-    <!-- Help Button -->
-    <div id="help-btn" class="help-btn">?</div>
-    
-    <!-- Help Modal -->
-    <div id="help-modal" class="help-modal">
-        <div class="help-content">
-            <span class="close-help">&times;</span>
-            <h2>How to Use</h2>
-            <ol>
-                <li>Print the marker pattern from the markers folder</li>
-                <li>Allow camera access when prompted</li>
-                <li>Point your camera at the printed marker</li>
-                <li>Tap on the 3D model to see more information</li>
-            </ol>
-            <p><strong>Note:</strong> For best results, ensure good lighting and keep the marker steady.</p>
-        </div>
-    </div>
 
     <!-- Loading Indicator (initially hidden) -->
     <div id="loading" style="display: none;">
