--- a/public/sanchi-ar.html
+++ b/public/sanchi-ar.html
@@ -83,7 +83,7 @@
                     'matrixCodeType: 3x3',
                     'trackingMethod: best',
                     'maxDetectionRate: 30',
-                    'cameraParametersUrl: https://rawcdn.githack.com/AR-js-org/AR.js/3.4.0/aframe/examples/asset/data/camera_para.dat',
+                    'cameraParametersUrl: ./data/camera_para.dat',
                     'markerPatternUrl: https://rawcdn.githack.com/AR-js-org/AR.js/3.4.0/aframe/examples/asset/data/patt.hiro'
                 ].join('; ')
             };
