--- a/public/sanchi-ar.html
+++ b/public/sanchi-ar.html
@@ -66,7 +66,7 @@
             // Create a new scene
             const scene = document.createElement('a-scene');
             scene.setAttribute('embedded', '');
-            scene.setAttribute('renderer', 'antialias: true; alpha: true');
+            scene.setAttribute('renderer', 'antialias: true; alpha: true; willReadFrequently: true');
             scene.setAttribute('vr-mode-ui', 'enabled: false');
             scene.setAttribute('loading-screen', 'enabled: false');
             
@@ -84,7 +84,7 @@
                     'trackingMethod: best',
                     'maxDetectionRate: 30',
                     'cameraParametersUrl: ./data/camera_para.dat',
-                    'markerPatternUrl: https://rawcdn.githack.com/AR-js-org/AR.js/3.4.0/aframe/examples/asset/data/patt.hiro'
+                    'markerPatternUrl: ./data/patt.hiro'
                 ].join('; ')
             };
             
