Add Sankranti Cow model and AR experience, update downloads page, and fix AR positioning

--- a/public/index.html
+++ b/public/index.html
@@ -448,6 +448,60 @@
         </div>
     </section>
 
+    <!-- Download Section -->
+    <section class="download-section" style="padding: 6rem 0; background-color: #f8f9fa;">
+        <div class="container">
+            <h2 class="section-title">Download 3D Models</h2>
+            <p style="text-align: center; max-width: 800px; margin: 0 auto 3rem; color: #555; line-height: 1.6;">
+                Download our collection of 3D models to explore Indian heritage in augmented reality. These models are free to use for educational and non-commercial purposes.
+            </p>
+            
+            <div class="model-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem;">
+                <!-- Taj Mahal -->
+                <div class="model-card" style="background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;">
+                    <div style="height: 200px; overflow: hidden;">
+                        <img src="https://images.unsplash.com/photo-1564507592331-d622afc0f2f3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Taj Mahal" style="width: 100%; height: 100%; object-fit: cover;">
+                    </div>
+                    <div style="padding: 1.5rem;">
+                        <h3 style="margin-top: 0; color: var(--primary);">Taj Mahal</h3>
+                        <p style="color: #666; margin-bottom: 1.5rem;">Iconic white marble mausoleum in Agra, India.</p>
+                        <a href="/models/taj-mahal/taj_mahal_3d_model.glb" download class="btn" style="display: block; text-align: center; background: var(--secondary);">
+                            <i class="fas fa-download"></i> Download GLB
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Ellora Caves -->
+                <div class="model-card" style="background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;">
+                    <div style="height: 200px; overflow: hidden;">
+                        <img src="https://images.unsplash.com/photo-1585506942-246b9d5eac6a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Ellora Caves" style="width: 100%; height: 100%; object-fit: cover;">
+                    </div>
+                    <div style="padding: 1.5rem;">
+                        <h3 style="margin-top: 0; color: var(--primary);">Ellora Caves</h3>
+                        <p style="color: #666; margin-bottom: 1.5rem;">Rock-cut cave temples and monasteries in Maharashtra.</p>
+                        <a href="/models/ellora/ellora_caves__india.glb" download class="btn" style="display: block; text-align: center; background: var(--secondary);">
+                            <i class="fas fa-download"></i> Download GLB
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Sanchi Stupa -->
+                <div class="model-card" style="background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;">
+                    <div style="height: 200px; overflow: hidden;">
+                        <img src="https://images.unsplash.com/photo-1585506942818-6f0a36f8e3e1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Sanchi Stupa" style="width: 100%; height: 100%; object-fit: cover;">
+                    </div>
+                    <div style="padding: 1.5rem;">
+                        <h3 style="margin-top: 0; color: var(--primary);">Sanchi Stupa</h3>
+                        <p style="color: #666; margin-bottom: 1.5rem;">Ancient Buddhist monument in Madhya Pradesh.</p>
+                        <a href="#" class="btn" style="display: block; text-align: center; background: #95a5a6; cursor: not-allowed;" disabled>
+                            <i class="fas fa-download"></i> Coming Soon
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="footer-bottom">
