fix: update model scaling and positioning for all AR pages
- Fixed Taj Mahal model path and adjusted scaling
- Standardized model scaling across all AR pages
- Improved model positioning and rotation
- Ensured consistent container scaling for better AR experience

--- a/public/kaaba-ar.html
+++ b/public/kaaba-ar.html
@@ -91,12 +91,12 @@
             modelContainer.setAttribute('position', '0 0 0');
             modelContainer.setAttribute('scale', '0.1 0.1 0.1');
             
-            // Copy the model to a local directory first
+            // Add 3D model
             const model = document.createElement('a-entity');
             model.setAttribute('gltf-model', 'url(./models/kaaba/kaaba_in_mecca.glb)');
-            model.setAttribute('scale', '4 4 4');
-            model.setAttribute('position', '0 -1 0');
-            model.setAttribute('rotation', '0 180 0');
+            model.setAttribute('scale', '0.02 0.02 0.02');
+            model.setAttribute('position', '0 0.5 0');
+            model.setAttribute('rotation', '0 0 0');
             modelContainer.appendChild(model);
             
             // Add ground plane
