--- a/public/christmas-ar.html
+++ b/public/christmas-ar.html
@@ -91,12 +91,12 @@
             modelContainer.setAttribute('position', '0 0 0');
             modelContainer.setAttribute('scale', '0.01 0.01 0.01');
             
-            // Copy the model to a local directory first
+            // Add 3D model
             const model = document.createElement('a-entity');
             model.setAttribute('gltf-model', 'url(./models/christmas/christmas_tree.glb)');
-            model.setAttribute('scale', '4 4 4');
-            model.setAttribute('position', '0 -1 0');
-            model.setAttribute('rotation', '0 180 0');
+            model.setAttribute('scale', '0.5 0.5 0.5');
+            model.setAttribute('position', '0 0.5 0');
+            model.setAttribute('rotation', '0 0 0');
             modelContainer.appendChild(model);
             
             // Add ground plane
