--- a/public/taj-mahal-ar.html
+++ b/public/taj-mahal-ar.html
@@ -155,15 +155,15 @@
         // Create model container with raycastable attribute
         const modelContainer = document.createElement('a-entity');
         modelContainer.setAttribute('position', '0 0 0');
-        modelContainer.setAttribute('scale', '0.1 0.1 0.1');
+        modelContainer.setAttribute('scale', '1 1 1');
         modelContainer.setAttribute('data-raycastable', 'true');
         
         // Add 3D model
         const model = document.createElement('a-entity');
-        model.setAttribute('gltf-model', 'url(./models/taj-mahal/taj_mahal_3d_model.glb)');
-        model.setAttribute('scale', '4 4 4');
-        model.setAttribute('position', '0 -1 0');
-        model.setAttribute('rotation', '0 180 0');
+        model.setAttribute('gltf-model', 'url(./models/taj_mahal/Box.glb)');
+        model.setAttribute('scale', '0.5 0.5 0.5');
+        model.setAttribute('position', '0 0.5 0');
+        model.setAttribute('rotation', '0 0 0');
         modelContainer.appendChild(model);
         
         // Add ground plane
