--- a/public/index.html
+++ b/public/index.html
@@ -414,6 +414,9 @@
                 <li><a href="#home" class="active"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
                 <li><a href="#team"><i class="fas fa-users"></i> Our Team</a></li>
+                <li><a href="#" id="featureRequestBtn" class="btn btn-secondary">
+                    <i class="fas fa-lightbulb"></i> Request Feature
+                </a></li>
                 <li><a href="taj-placeholder-ar.html" class="btn btn-primary">
                     <i class="fas fa-vr-cardboard"></i> Try AR Experience
                 </a></li>
@@ -788,5 +791,20 @@
     
     <!-- Main JavaScript -->
     <script src="js/main.js"></script>
+    
+    <!-- Feature Request Button -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const featureRequestBtn = document.getElementById('featureRequestBtn');
+            if (featureRequestBtn) {
+                featureRequestBtn.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const subject = encodeURIComponent('Feature Request for Ctrl+Alt+Bharat');
+                    const body = encodeURIComponent('\n\n---\nSent from Ctrl+Alt+Bharat website');
+                    window.location.href = `mailto:test@gmail.com?subject=${subject}&body=${body}`;
+                });
+            }
+        });
+    </script>
 </body>
 </html>
