--- a/public/kaaba-ar.html
+++ b/public/kaaba-ar.html
@@ -166,6 +166,13 @@
     </div>
     
     <script>
+        // Handle feature request button
+        document.getElementById('featureRequestBtn').addEventListener('click', function() {
+            const subject = encodeURIComponent('Feature Request for Kaaba AR');
+            const body = encodeURIComponent('\n\n---\nSent from Kaaba AR Experience');
+            window.location.href = `mailto:test@gmail.com?subject=${subject}&body=${body}`;
+        });
+
         document.getElementById('downloadBtn').addEventListener('click', function() {
             // Create a temporary link element
             const link = document.createElement('a');
