--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Ctrl+Alt+Bharat - Experience Indian Heritage in AR</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         /* Additional page-specific styles can go here */
         .features {
